[tool.poetry]
name = "hrlbs"
version = "0.1.0"
description = ""
authors = ["nate giraldi <ng269@cornell.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = {extras = ["sqlalchemy"], version = "^3.9.1.post1"}
fastapi = "^0.87.0"
pydantic = "^1.10.2"
uvicorn = {extras = ["all"], version = "^0.20.0"}
structlog = "^22.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
